2009-04-02  Frank Warmerdam  <warmerdam@pobox.com>

	* src: Fix various warnings. 

2009-03-11  Frank Warmerdam  <warmerdam@pobox.com>

	* man/man1: fix Snyder reference (#29)

2009-03-10  Howard Butler <hobu.inc@gmail.com>
	* autogen.sh: Use autogen.sh from libLAS for wider
        platform (OSX, Solaris) compatibility
	* config.guess config.log: remove autoconf temporary
	files

2009-03-10  Mateusz Loskot  <mateusz@loskot.net>

	* makefile.vc: Added new files pj_mutex.c, pj_initcache.c.

2009-03-09  Frank Warmerdam  <warmerdam@pobox.com>

	* pj_init.c, pj_mutex.c, pj_initcache.c: Introduced in-memory caching
	of init file search results.

2009-03-08	IGNF <didier.richard@ign.fr>

	* src/PJ_gstmerc.c: Correction of a bug in inv() function :
	the projected origin coordinates where descaled.

	* nad/testIGNF: Add a comment on the mandatory existance of the world grid
	in order to make the test.

	* ChangeLog: this comments

2009-01-26  Frank Warmerdam  <warmerdam@pobox.com>

	* src/*.c: Remove SCCSID and lint stuff from all source files.

2009-01-23  Frank Warmerdam  <warmerdam@pobox.com>

	* src/biveval.c: Avoid use of static variables which interfere with
	re-entrancy (#24)" 

2009-01-05  Frank Warmerdam  <warmerdam@pobox.com>

	* src: Removed CVS log messages from various files since they are
	not maintained by subversion.

2008-09-16  Frank Warmerdam  <warmerdam@pobox.com>

	* src/{Makefile.am, Makefile.in}: Added '-no-undefined' option to
	LDFLAGS. This is required to properly build a library in some
	environments, MinGW in particular.

2008-08-21  Frank Warmerdam  <warmerdam@pobox.com>

	* Prepare 4.6.1RC2 

	* nad/td_out.dist: backed out erroneous changes in 4.6.0 that lost 
	datum shifts with grid shift files.  Added stere (#12) test. 

	* nmake.opt: Added /Op to avoid stere errors per ticket #12.

2008-08-07  Frank Warmerdam  <warmerdam@pobox.com>

	* nmake.opt, nad/makefile.vc: Make sure we use PROJ_LIB_DIR when